tdf#143424: support for "Chapter number without separator"

If LO is using list format strings (this is default behavior since
aa5c6d12) it was not able to show just numbering without all formatting,
as it used in some fields.

Change-Id: Ib4695b8e1c2d7a451522c7e04af2216d16aceefe